[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/Scenery/Grass_tile.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Scenery/Tree_3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Scenery/Branch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Scenery/Stone_2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Scenery/Grass_3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Scenery/Torch.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Scenery/Rock_3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/Scenery/Tree_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/Scenery/Rock.tscn" type="PackedScene" id=9]
[ext_resource path="res://Prefabs/Scenery/Corrupted_candle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Prefabs/Scenery/Grass_4.tscn" type="PackedScene" id=11]
[ext_resource path="res://Prefabs/Scenery/Grass_5.tscn" type="PackedScene" id=12]
[ext_resource path="res://Prefabs/Gameplay/Sacrifical_circle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Prefabs/Scenery/Grass_2.tscn" type="PackedScene" id=14]
[ext_resource path="res://Prefabs/Scenery/Grass.tscn" type="PackedScene" id=15]
[ext_resource path="res://Prefabs/Scenery/Branch_2.tscn" type="PackedScene" id=16]
[ext_resource path="res://Prefabs/Scenery/Stone.tscn" type="PackedScene" id=17]
[ext_resource path="res://Prefabs/Scenery/Ambience_SFX.tscn" type="PackedScene" id=18]
[ext_resource path="res://Prefabs/Scenery/Rock_2.tscn" type="PackedScene" id=19]
[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=20]
[ext_resource path="res://Sprites/FX/Shadow.png" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/Title.png" type="Texture" id=22]
[ext_resource path="res://Scripts/UI/Main_menu.gd" type="Script" id=23]
[ext_resource path="res://Sprites/UI/Default_theme.tres" type="Theme" id=24]
[ext_resource path="res://Sprites/UI/Fonts/CHILLER.TTF" type="DynamicFontData" id=25]
[ext_resource path="res://Scenes/Game/Options.tscn" type="PackedScene" id=26]
[ext_resource path="res://SFX/SFX/Kill.wav" type="AudioStream" id=27]
[ext_resource path="res://SFX/SFX/cartoony_step_1.wav" type="AudioStream" id=28]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=29]

[sub_resource type="DynamicFont" id=2]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 25 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 20 )
region = Rect2( 38, 21, 21, 8 )

[node name="Main_menu" type="Node"]
pause_mode = 2
script = ExtResource( 23 )
options = ExtResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Back" type="CanvasLayer" parent="."]

[node name="Back_layer" type="ColorRect" parent="Back"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0392157, 0.101961, 0.784314 )

[node name="Menu_layer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="Menu_layer"]
anchor_top = -0.15625
anchor_right = 1.0
anchor_bottom = 0.64375
rect_pivot_offset = Vector2( 120, 64 )
mouse_filter = 2
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buttons" type="VBoxContainer" parent="Menu_layer"]
anchor_left = 0.36875
anchor_top = 0.43125
anchor_right = 0.63125
anchor_bottom = 0.96875
rect_pivot_offset = Vector2( 31, 43 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start_button" type="Button" parent="Menu_layer/Buttons"]
margin_top = 6.0
margin_right = 63.0
margin_bottom = 28.0
theme = ExtResource( 24 )
text = "Start"

[node name="Options_button" type="Button" parent="Menu_layer/Buttons"]
margin_top = 32.0
margin_right = 63.0
margin_bottom = 54.0
theme = ExtResource( 24 )
text = "Options"

[node name="Quit_button" type="Button" parent="Menu_layer/Buttons"]
margin_top = 58.0
margin_right = 63.0
margin_bottom = 80.0
theme = ExtResource( 24 )
text = "Quit"

[node name="Label" type="Label" parent="Menu_layer"]
anchor_left = 0.0208333
anchor_top = 0.8375
anchor_right = 0.2125
anchor_bottom = 1.0
theme = ExtResource( 24 )
custom_colors/font_color = Color( 0.12549, 0.54902, 0.698039, 1 )
custom_fonts/font = SubResource( 2 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Scene" type="Node2D" parent="."]

[node name="Ambience_SFX" parent="Scene" instance=ExtResource( 18 )]

[node name="Sprite" type="Sprite" parent="Scene"]
z_index = -10
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 200, 200, 400, 200 )

[node name="YSort" type="YSort" parent="Scene"]

[node name="Sacrifical_circle" parent="Scene/YSort" instance=ExtResource( 13 )]
position = Vector2( 0, -17 )

[node name="Details" type="YSort" parent="Scene/YSort"]

[node name="Sprite" type="Sprite" parent="Scene/YSort/Details"]
position = Vector2( 0, 22 )
texture = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="Scene/YSort/Details/Sprite"]
position = Vector2( 0, 3 )
scale = Vector2( 0.390625, 0.09375 )
z_index = -1
texture = ExtResource( 21 )

[node name="Branch" parent="Scene/YSort/Details" instance=ExtResource( 16 )]
position = Vector2( 47, 59 )

[node name="Branch2" parent="Scene/YSort/Details" instance=ExtResource( 3 )]
position = Vector2( -92, -27 )

[node name="Corrupted_candle" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( -106, 5 )

[node name="Corrupted_candle2" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( 107, 5 )
scale = Vector2( -1, 1 )

[node name="Corrupted_candle3" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( 0, -48 )

[node name="Corrupted_candle4" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( 1, 62 )
scale = Vector2( -1, 1 )

[node name="Corrupted_candle5" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( -87, 47 )
scale = Vector2( -1, 1 )

[node name="Corrupted_candle6" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( 92, 42 )

[node name="Corrupted_candle7" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( -68, -38 )
scale = Vector2( -1, 1 )

[node name="Corrupted_candle8" parent="Scene/YSort/Details" instance=ExtResource( 10 )]
position = Vector2( 68, -38 )

[node name="Grass" parent="Scene/YSort/Details" instance=ExtResource( 15 )]
position = Vector2( -65, 57 )

[node name="Grass2" parent="Scene/YSort/Details" instance=ExtResource( 14 )]
position = Vector2( -45, -48 )

[node name="Grass3" parent="Scene/YSort/Details" instance=ExtResource( 5 )]
position = Vector2( -53, -47 )

[node name="Grass4" parent="Scene/YSort/Details" instance=ExtResource( 11 )]
position = Vector2( 48, -48 )

[node name="Grass5" parent="Scene/YSort/Details" instance=ExtResource( 12 )]
position = Vector2( 77, 54 )

[node name="Grass6" parent="Scene/YSort/Details" instance=ExtResource( 14 )]
position = Vector2( -70, 58 )

[node name="Grass7" parent="Scene/YSort/Details" instance=ExtResource( 12 )]
position = Vector2( 41, -51 )

[node name="Grass8" parent="Scene/YSort/Details" instance=ExtResource( 11 )]
position = Vector2( -46, 33 )

[node name="Grass9" parent="Scene/YSort/Details" instance=ExtResource( 14 )]
position = Vector2( 59, -31 )

[node name="Rock" parent="Scene/YSort/Details" instance=ExtResource( 9 )]
position = Vector2( -95, 72 )

[node name="Rock3" parent="Scene/YSort/Details" instance=ExtResource( 7 )]
position = Vector2( 86, 71 )
scale = Vector2( -1, 1 )

[node name="Rock4" parent="Scene/YSort/Details" instance=ExtResource( 19 )]
position = Vector2( -84, 68 )

[node name="Rock5" parent="Scene/YSort/Details" instance=ExtResource( 7 )]
position = Vector2( -92, -54 )

[node name="Rock6" parent="Scene/YSort/Details" instance=ExtResource( 9 )]
position = Vector2( -83, -54 )
scale = Vector2( -1, 1 )

[node name="Rock7" parent="Scene/YSort/Details" instance=ExtResource( 19 )]
position = Vector2( 95, -49 )
scale = Vector2( -1, 1 )

[node name="Torch" parent="Scene/YSort/Details" instance=ExtResource( 6 )]
position = Vector2( -104, 61 )

[node name="Tree" parent="Scene/YSort/Details" instance=ExtResource( 8 )]
position = Vector2( -74, -58 )

[node name="Tree2" parent="Scene/YSort/Details" instance=ExtResource( 2 )]
position = Vector2( 99, 63 )

[node name="Stone" parent="Scene/YSort/Details" instance=ExtResource( 17 )]
position = Vector2( -45, 14 )

[node name="Stone2" parent="Scene/YSort/Details" instance=ExtResource( 4 )]
position = Vector2( 44, -5 )
scale = Vector2( -1, 1 )

[node name="Menu_tween" type="Tween" parent="."]

[node name="Options_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
bus = "Game"
script = ExtResource( 29 )
samples = [ ExtResource( 28 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
bus = "Game"
script = ExtResource( 29 )
samples = [ ExtResource( 27 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[connection signal="pressed" from="Menu_layer/Buttons/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="Menu_layer/Buttons/Options_button" to="." method="_on_Options_button_pressed"]
[connection signal="pressed" from="Menu_layer/Buttons/Quit_button" to="." method="_on_Quit_button_pressed"]
[connection signal="timeout" from="Options_timer" to="." method="_on_Options_timer_timeout"]
